# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-09-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Separate the cloudi_services_internal, cloudi_services_databases, and
      cloudi_services_messaging Erlang applications into a single
      Erlang application for each CloudI service to help isolate
      CloudI service Erlang application dependencies

2013-09-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the monkey_latency and monkey_chaos service configuration
      options for providing any service configuration a way to change
      performance for evaluating system resilience during service failures
      (http://techblog.netflix.com/2011/07/netflix-simian-army.html)

2013-09-26 Mahesh Paolini-Subramanya   <mahesh [at] dieswaytoofast (dot) com>

    * Update erlasticsearch to take json docs
    * Update jsx to 1.4.3

2013-09-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update uuid

2013-09-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make the cloudi module use the cloudi_service module interface if a
      Dispatcher pid is provided instead of a Context record
      (to provide a way of making a flexible interface for both services
       and non-service Erlang pids)
    * Convert all the internal services to use the cloudi module for
      external interface functions

2013-09-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix JSON RPC errors with CloudI Service API
    * Fix the CloudI Service API run.py test
    * Fix cloudi_service_api:nodes_add/2 and cloudi_service_api:nodes_remove/2

2013-09-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_service_db to store with the Key equal to the TransId of
      the service request

2013-09-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make the cloudi_service_http_cowboy multipart support generic

2013-09-18 Michael Truog   <mjtruog [at] gmail (dot) com>
