@@ -8,6 +8,7 @@
         cloudi_http_cowboy_handler,
         cloudi_service_http_cowboy
         ]},
+   {registered, []},
    {applications, [
         %cloudi_core, % makes relx break
         cloudi_x_cowboy,
