@@ -7,6 +7,7 @@
    {modules, [
         cloudi_service_timers
         ]},
+   {registered, []},
    {applications, [
         %cloudi_core, % makes relx break
         stdlib,
