@@ -7,6 +7,7 @@
    {modules, [
         cloudi_service_zeromq
         ]},
+   {registered, []},
    {applications, [
         @ZEROMQ_ERLZMQ_APPCONF@
         %cloudi_core, % makes relx break
