@@ -14,7 +14,7 @@
 %%%
 %%% BSD LICENSE
 %%% 
-%%% Copyright (c) 2011, Michael Truog <mjtruog at gmail dot com>
+%%% Copyright (c) 2011-2013, Michael Truog <mjtruog at gmail dot com>
 %%% All rights reserved.
 %%% 
 %%% Redistribution and use in source and binary forms, with or without
@@ -49,8 +49,8 @@
 %%% DAMAGE.
 %%%
 %%% @author Michael Truog <mjtruog [at] gmail (dot) com>
-%%% @copyright 2011 Michael Truog
-%%% @version 0.1.9 {@date} {@time}
+%%% @copyright 2011-2013 Michael Truog
+%%% @version 1.2.2 {@date} {@time}
 %%%------------------------------------------------------------------------
 
 -module(pqueue3).
@@ -98,7 +98,7 @@ in(Value, Q) ->
 
 in(_, P, {Size, Offset, _, _})
     when (P + Offset) < 0; (P + Offset) > Size ->
-    throw(badarg);
+    erlang:exit(badarg);
 in(Value, P, {Size, Offset, empty, Bins}) ->
     PriorityIndex = P + Offset,
     {Size, Offset, PriorityIndex,
@@ -224,7 +224,7 @@ out({Size, Offset, I, Bins}) ->
 
 out(P, {Size, Offset, _, _})
     when (P + Offset) < 0; (P + Offset) > Size ->
-    throw(badarg);
+    erlang:exit(badarg);
 out(_, {_, _, empty, _} = Q) ->
     {empty, Q};
 out(P, {Size, Offset, I, Bins}) ->
