@@ -2,6 +2,6 @@
   [{description, "Trie Data Structure"},
    {vsn, "1.3.0"},
    {modules, [btrie, trie]},
-   {applications, [stdlib]},
-   {start_phases, []}]}.
+   {registered, []},
+   {applications, [stdlib]}]}.
 
