@@ -2,5 +2,6 @@
   [{description, "Native UUID Generation"},
    {vsn, "1.2.5"},
    {modules, [uuid]},
+   {registered, []},
    {applications, [quickrand, stdlib]}]}.
 
