@@ -7,6 +7,7 @@
       cloudi_services_messaging Erlang applications into a single
       Erlang application for each CloudI service to help isolate
       CloudI service Erlang application dependencies
+    * Update all dependencies to have {registered, []}, to keep relx happy
 
 2013-09-28 Michael Truog   <mjtruog [at] gmail (dot) com>
 
